Tests: fix for running tests using Java 17